BUG: Fix incorrect read of newer VTK files
VtkIO can read the .vtk file version 4.2.
In VTK 9, a new version of the .vtk file format, 5.1, was introduced.
This fix internally converts all files back to the 4.2 version so the
reading code is still valid.

The symptom was segfaults in some of the downstream modules that use
this library because the indices read were no longer correct or within
bounds.

In the future, this should probably be updated to not have its own file
reader, but rather to use VTK's, and to convert from vtkPolyData, or
use vtkPolyData directly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ endif()
 
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
+find_package(VTK REQUIRED)
+include(${VTK_USE_FILE})
+
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
 set(MeshLib_INSTALL_CONFIG_DIR "lib/cmake/Mesh-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}")
 
@@ -62,6 +65,9 @@ target_include_directories(Mesh PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/Util>
   $<INSTALL_INTERFACE:include>
   )
+target_link_libraries(Mesh PRIVATE
+  ${VTK_LIBRARIES}
+)
 
 if(APPLE)
     # use, i.e. don't skip the full RPATH for the build tree
