Revert "COMP: Explicitly list linked VTK libraries"
This reverts commit a7c1abe018fe60032ea18953534f1b4807bc6b6a.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,7 @@ target_include_directories(Mesh PUBLIC
   $<INSTALL_INTERFACE:include>
   )
 target_link_libraries(Mesh PRIVATE
-    VTK::CommonCore
-    VTK::IOCore
-    VTK::IOLegacy
+  ${VTK_LIBRARIES}
 )
 
 if(APPLE)
